--- a/index.html
+++ b/index.html
@@ -1,107 +1,22 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Minecraft Toos - 我的世界工具箱</title>
-    <link rel="icon" href="logo.png" type="image/png"> <!-- 添加 Logo -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
-    <style>
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: 'Roboto', sans-serif; background-color: #f0fdf4; color: #166534; line-height: 1.6; }
-        
-        header {
-            background: linear-gradient(135deg, #10b981, #4ade80);
-            color: white;
-            padding: 2rem 1rem;
-            text-align: center;
-            position: relative;
-            z-index: 1000;
-        }
-
-        .logo-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            font-weight: 500;
-            transition: all 0.3s ease;
-            margin: 0 1rem;
-        }
-
-        nav a:hover { text-decoration: underline; }
-        nav a#github-link { text-decoration: underline red; }
-
-        .download-btn {
-            display: inline-block;
-            margin-top: 2rem;
-            padding: 1rem 2rem;
-            background-color: #16a34a;
-            color: white;
-            border-radius: 8px;
-            text-decoration: none;
-            font-size: 1.2rem;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        .download-btn:hover {
-            background-color: #15803d;
-            transform: scale(1.05);
-        }
-
-        .feature-card {
-            background: white;
-            border-radius: 12px;
-            padding: 1.5rem;
-            margin: 1rem 0;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-            transition: transform 0.3s ease;
-        }
-
-        .feature-card:hover { transform: translateY(-5px); }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JetCPP 工作室</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="logo-container">
-            <img src="logo.png" alt="Logo">
-            <h1>Minecraft Toos</h1>
-        </div>
-        <nav>
-            <a href="download.html">下载</a>
-            <a href="about.html">关于</a>
-            <a id="github-link" href="https://github.com/dongzheyu/Minecraft-Toos/" 
-               target="_blank" 
-               rel="noopener noreferrer">Github</a>
-        </nav>
-    </header>
+    <nav class="navbar">
+        <a href="index.html">首页</a>
+        <a href="projects.html">所有项目</a>
+        <a href="about.html">关于我们</a>
+    </nav>
 
-    <main style="max-width: 1200px; margin: 2rem auto; padding: 0 1rem;">
-        <h2>立即下载</h2>
-        <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe"
-           class="download-btn"
-           download>立即下载</a>
-        
-        <section id="features" style="margin-top: 3rem;">
-            <h3>核心优势</h3>
-            <div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 2rem;">
-                <div class="feature-card"><h4>功能齐全</h4><p>主文件不超过300MB，却包含12项大板块功能。</p></div>
-                <div class="feature-card"><h4>启动迅速</h4><p>仅需2秒即可快速启动，无需多余等待。</p></div>
-                <div class="feature-card"><h4>开源免费</h4><p>已在GitHub上开源，无需支付任何费用。</p></div>
-                <div class="feature-card"><h4>安全无毒</h4><p>所有板块及主程序已通过杀毒软件检测。</p></div>
-            </div>
-        </section>
+    <main class="hero">
+        <h1>欢迎来到 JetCPP 工作室</h1>
+        <p>我们专注于高质量的软件开发与技术创新</p>
+        <a href="projects.html" class="btn">查看项目</a>
     </main>
-
-    <footer style="text-align: center; padding: 2rem; background: #ecfdf5; margin-top: 3rem;">
-        <p>JetCPP©2024-2025 保留所有权利</p>
-    </footer>
 </body>
 </html>
