--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,3 @@
-<!-- projects.html -->
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -8,26 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- 统一导航栏 -->
     <nav>
         <ul class="nav-links">
-            <!-- 相同导航栏 -->
+            <li><a href="index.html">主页</a></li>
+            <li><a href="about.html">关于</a></li>
+            <li><a href="projects.html">项目</a></li>
         </ul>
     </nav>
 
+    <!-- Logo区域 -->
     <div class="logo-container">
         <img src="logo.png" alt="JetCPP Logo" class="logo">
     </div>
 
+    <!-- 项目列表 -->
     <div class="content">
-        <h1>所有项目</h1>
+        <h1 class="slogan">我们的项目</h1>
+        
         <div class="project-card">
             <h2>Minecraft-Tools</h2>
-            <p>一站式Minecraft服务器管理解决方案</p>
-            <p>🚀 已发布 v1.2.0 | 下载量 15k+</p>
+            <p>一款便捷好用又功能齐全的我的世界工具箱</p>
+            <p>🚀 当前版本: 6.4.0 | 下载量: 15k+</p>
             <a href="https://github.com/dongzheyu/Minecraft-Toos/" 
                class="github-link"
-               target="_blank">
-               GitHub仓库
+               target="_blank"
+               rel="noopener">
+               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                   <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
+               </svg>
             </a>
         </div>
     </div>
