--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <title>项目列表 | JetCPP</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="alt-layout"> <!-- 新增class -->
+<body class="alt-layout">
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">主页</a></li>
@@ -15,14 +15,41 @@
         </ul>
     </nav>
 
-    <!-- 修改后的Logo区域 -->
     <div class="logo-container">
         <img src="logo.png" alt="JetCPP Logo" class="logo">
     </div>
 
     <div class="content">
         <h1 class="slogan">我们的项目</h1>
-        <!-- 项目内容保持不变 -->
+        
+        <div class="project-card">
+            <h2>Minecraft-Tools</h2>
+            <p>一站式Minecraft服务器管理解决方案</p>
+            <p>🚀 当前版本: v6.4.0 | 下载量: 15k+</p>
+            
+            <div class="button-group">
+                <a href="https://github.com/dongzheyu/Minecraft-Toos/" 
+                   class="github-link"
+                   target="_blank"
+                   rel="noopener">
+                   GitHub仓库
+                </a>
+                <a href="https://github.com/dongzheyu/Minecraft-Toos/releases/download/6.4.0/Minecraft-Toos.Setup.exe"
+                   class="download-btn"
+                   download>
+                   ⬇️ 下载安装包 (Windows)
+                </a>
+            </div>
+
+            <div class="update-log">
+                <h3>更新日志 v6.4.0</h3>
+                <ul>
+                    <li>修复在某些情况下打不开的问题</li>
+                    <li>添加了登录功能，（默认用户名：用户默认密码：12345678）</li>
+                    <li>添加了大家期待许久的检查更新程序，集成到安装包里，目前应用代码还是无法实现。</li>
+                </ul>
+            </div>
+        </div>
     </div>
 </body>
 </html>
