--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>JetCPP 工作室</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <!-- 导航栏 -->
+<body class="index-layout">
     <nav>
         <ul class="nav-links">
             <li><a href="index.html">主页</a></li>
@@ -16,18 +15,21 @@
         </ul>
     </nav>
 
-    <!-- Logo区域 -->
     <div class="logo-container">
         <img src="logo.png" alt="JetCPP Logo" class="logo">
     </div>
 
-    <!-- 主要内容 -->
     <div class="content">
         <h1 class="slogan">代码重塑世界 · 创新驱动未来</h1>
         
         <div class="project-card">
             <h2>最新动态</h2>
             <p>欢迎来到JetCPP工作室，探索编程的无限可能！</p>
+            <div class="button-group">
+                <a href="projects.html" class="download-btn">
+                    🚀 查看我们的项目
+                </a>
+            </div>
         </div>
     </div>
 </body>
