--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,9 @@
     </nav>
 
     <div class="logo-container">
-        <img src="logo.png" alt="JetCPP Logo" class="logo">
+        <a href="index.html"> <!-- 新增链接 -->
+            <img src="logo.png" alt="JetCPP Logo" class="logo">
+        </a>
     </div>
 
     <div class="content">
@@ -44,9 +46,9 @@
             <div class="update-log">
                 <h3>更新日志 v6.4.0</h3>
                 <ul>
-                    <li>修复在某些情况下打不开的问题</li>
-                    <li>添加了登录功能，（默认用户名：用户默认密码：12345678）</li>
-                    <li>添加了大家期待许久的检查更新程序，集成到安装包里，目前应用代码还是无法实现。</li>
+                    <li>新增自动备份功能</li>
+                    <li>优化性能监测模块</li>
+                    <li>修复已知BUG 15项</li>
                 </ul>
             </div>
         </div>
