--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
             <div class="install">
                 <h3>安装提示</h3>
                 <ul>
-                    <li>请安装下面的.NET运行库，否则有些功能无法使用。（有的当我没说）</li>
+                    <li>请安装上面的.NET运行库，否则有些功能无法使用。（有的当我没说）</li>
                     <li>禁止未经过作者许可复制或转发本程序任何部分！</li>
                     <li>若然此软件引用，请加上“本文件转自bilibili JetCPP”</li>
                 </ul>
