--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
         <div class="project-card">
             <h2>Minecraft-Tools</h2>
             <p>一款功能齐全的我的世界工具箱</p>
-            <p>🚀 当前版本: v6.4.2 | 下载量: 15k+</p>
+            <p>🚀 当前版本: v6.5.2 | 下载量: 15k+</p>
 
             <div class="button-group">
                 <a href="https://github.com/dongzheyu/Minecraft-Toos/"
@@ -37,7 +37,7 @@
                    rel="noopener">
                    GitHub仓库
                 </a>
-                <a href="https://files.zohopublic.com.cn/public/workdrive-public/download/9kwj71da522531b35450588f4a73243d49387?x-cli-msg=%7B%22linkId%22%3A%221GumWstoq6D-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D"
+                <a href="https://files.zohopublic.com.cn/public/workdrive-public/download/9kwj7cc540a12607d445ea08ed3e34f81c7d1?x-cli-msg=%7B%22linkId%22%3A%221GumWstougF-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D"
                    class="download-btn"
                    download>
                    ⬇️ 下载安装包(仅支持X64的Windows10＆Windows11)
@@ -56,14 +56,13 @@
             </div>
 
             <div class="update-log">
-                <h3>更新日志 v6.5.0</h3>
+                <h3>更新日志 v6.5.2</h3>
                 <ul>
-                    <li>将所有类弹窗的 `cout` 替换为 `MessageBox`，提升用户体验。</li>
-                    <li>优化代码结构，提高可读性和维护性。</li>
-                    <li>新增赞助入口（爱发电），支持项目持续发展。</li>
-                    <li>添加帮助文档链接，方便用户查阅使用说明。</li>
-                    <li>性能进一步优化，提升整体运行效率。</li>
-                    <li>登录界面输入密码时自动显示为星号，增强安全性与交互体验。</li>
+                    <li>修复部分组件在启动后会多留一个pause问题。</li>
+                    <li>新增中文日志支持。包括记录用户信息、用户操作行为以及错误信息。</li>
+                    <li>更新部分组件为最新版本，以提升性能和兼容性。</li>
+                    <li>在主页添加「查看最终用户许可协议」按钮（EULA）。</li>
+                    <li>点击可直接跳转至协议详情页面。</li>
                 </ul>
             </div>
             <div class="install">
@@ -71,7 +70,7 @@
                 <ul>
                     <li>请安装上面的.NET运行库，否则有些功能无法使用。（有的当我没说）</li>
                     <li>禁止未经过作者许可复制或转发本程序任何部分！</li>
-                    <li>若然此软件引用，请加上“本文件转自<a href="https://space.bilibili.com/3546730880567808">Bilibili JetCPP</a></li>
+                    <li>若然此软件引用，请加上“本文件转自<a href="https://space.bilibili.com/3546730880567808">Bilibili 我是dongle</a></li>
                 </ul>
         </div>
     </div>
